# Regression-of-Used-Car-Prices

./: .gitignore  Makefile  README.md  iterando_caracteristicas.py  predicao_regression_car_used.ipynb  pyproject.toml  requirements.gdoc  requirements.txt  tratamento.py  tunagem_cat_boost.py  tunagem_gradiente_boost.py  tunagem_random_forest.py  tunagen_redes_neurais.py  utilizando_uv.md
.devcontainer/: devcontainer.json
untitled_project/: oracle.json
untitled_project/trial_0/: checkpoint.weights.h5  trial.json
untitled_project/trial_1/: checkpoint.weights.h5  trial.json
untitled_project/trial_2/: checkpoint.weights.h5  trial.json
untitled_project/trial_3/: checkpoint.weights.h5  trial.json
untitled_project/trial_4/: checkpoint.weights.h5  trial.json
