[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Regression-of-Used-Car-Prices"
version = "0.1.0"
description = "Descrição do seu projeto"
authors = [
    { name="Jeferson", email="sehnemjeferson@gmail.com" }
]
dependencies = [
    "kaggle",
    "black[jupyter]",
    "pandas==2.2.2",
    "numpy>=1.23",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "scikit-learn==1.4.0",
    "ipykernel",
    "plotly==5.18.0",
    "nbformat==5.2.0",
    "mime==0.1.0",
    "ipywidgets==8.1.3",
    "feature_engine==1.8.0",
    "keras==3.3.3",
    "tensorflow==2.17.0",
    "xgboost==2.0.3",
    "catboost==1.2.5",
    "scikit-optimize==0.10.0",
    "keras-tuner==1.4.7",
    "venn-abers==1.4.2",
    "lazypredict"
]

[tool.black]
line-length = 88
